--- a/sass/main.css
+++ b/sass/main.css
@@ -152,7 +152,7 @@ body {
   background-image: linear-gradient(to bottom, hsl(15, 100%, 70%) 50%, hsl(236, 45%, 20%));
 }
 .card--work .card__top {
-  background-image: url("../../images/icon-work.svg");
+  background-image: url("../images/icon-work.svg");
   background-position: right 1.6rem top -1rem;
   background-repeat: no-repeat;
 }
@@ -161,7 +161,7 @@ body {
   background-image: linear-gradient(to bottom, hsl(195, 74%, 62%) 50%, hsl(236, 45%, 20%));
 }
 .card--play .card__top {
-  background-image: url("../../images/icon-play.svg");
+  background-image: url("../images/icon-play.svg");
   background-position: right 1.6rem top -1rem;
   background-repeat: no-repeat;
 }
@@ -170,7 +170,7 @@ body {
   background-image: linear-gradient(to bottom, hsl(348, 100%, 68%) 50%, hsl(236, 45%, 20%));
 }
 .card--study .card__top {
-  background-image: url("../../images/icon-study.svg");
+  background-image: url("../images/icon-study.svg");
   background-position: right 1.6rem top -1rem;
   background-repeat: no-repeat;
 }
@@ -179,7 +179,7 @@ body {
   background-image: linear-gradient(to bottom, hsl(145, 58%, 55%) 50%, hsl(236, 45%, 20%));
 }
 .card--exercise .card__top {
-  background-image: url("../../images/icon-exercise.svg");
+  background-image: url("../images/icon-exercise.svg");
   background-position: right 1.6rem top 0;
   background-repeat: no-repeat;
 }
@@ -188,7 +188,7 @@ body {
   background-image: linear-gradient(to bottom, hsl(264, 64%, 52%) 50%, hsl(236, 45%, 20%));
 }
 .card--social .card__top {
-  background-image: url("../../images/icon-social.svg");
+  background-image: url("../images/icon-social.svg");
   background-position: right 1.6rem top -1rem;
   background-repeat: no-repeat;
 }
@@ -197,7 +197,7 @@ body {
   background-image: linear-gradient(to bottom, hsl(43, 84%, 65%) 50%, hsl(236, 45%, 20%));
 }
 .card--selfcare .card__top {
-  background-image: url("../../images/icon-self-care.svg");
+  background-image: url("../images/icon-self-care.svg");
   background-position: right 1.6rem top -1rem;
   background-repeat: no-repeat;
 }
